# nsga2-sh-cxr-finetuning

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  run_paper_reproduction.sh
experiments/: __init__.py  analyze.py  evaluate_test.py  run_ablations.py  run_baselines.py  run_paper_suite.py
finetune_ga/: __init__.py
finetune_ga/analysis/: __init__.py  artifact_contract.py  final_package_audit.py  metric_contract.py  plots.py  reports.py
finetune_ga/baselines/: __init__.py  common.py  fixed_configs.py  full_budget.py  ga_no_sh.py  literature_baselines.py  no_conditioning.py  optuna_bohb.py  optuna_common.py  optuna_full.py  random_full_budget.py  random_sh.py  single_objective_ga.py
finetune_ga/core/: __init__.py  final_artifacts.py  genome.py  metrics.py  training.py
finetune_ga/infra/: __init__.py  config.py  experiment_config.py  experiment_records.py  io_utils.py  math_utils.py  repro_manifest.py  run_utils.py  runtime.py  test_protocol.py  utils.py
finetune_ga/search/: __init__.py  common.py  nsga2.py  operators.py  task_executor.py  worker.py
finetune_ga/selection/: __init__.py  multiobjective.py
tests/: conftest.py  test_config_and_data.py  test_genome_and_search.py  test_hybrid_regressions.py  test_integration_end_to_end.py  test_literature_baselines.py  test_metrics_and_reports.py  test_training_helpers.py
