[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-ga"
version = "1.0.0"
description = "Multi-objective NAS for CNN fine-tuning via NSGA-II + Successive Halving"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "tensorflow==2.19.0",
  "numpy==2.0.2",
  "pandas==2.3.3",
  "scikit-learn==1.6.1",
  "matplotlib==3.10.0",
  "scipy==1.16.3",
  "tabulate==0.9.0",
  "kagglehub==1.0.0",
  "optuna==4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
]

[project.scripts]
run-nsga2            = "finetune_ga.search.nsga2:main"
run-baselines        = "experiments.run_baselines:main"
run-ablations        = "experiments.run_ablations:main"
run-paper-suite      = "experiments.run_paper_suite:main"
evaluate-test        = "experiments.evaluate_test:main"
analyze              = "finetune_ga.analysis.reports:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finetune_ga*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]